--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -10,6 +12,25 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  align-self: center;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+}
+
+.plant {
+  display: flex;
+  flex-direction: column;
+  flex: auto;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.text {
+  max-width: 185px;
+  text-align: center;
 }
 
 /* do not edit this footer */
